--- a/projects/FinalProject-Bugs/dominion/Makefile
+++ b/projects/FinalProject-Bugs/dominion/Makefile
@@ -25,7 +25,54 @@ runtests: testDrawCard
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player 
+unittest1: unittest1.c dominion.o rngs.o
+	gcc -o unittest1 -g unittest1.c dominion.o rngs.o $(CFLAGS)
+
+unittest2: unittest2.c dominion.o rngs.o
+	gcc -o unittest2 -g unittest2.c dominion.o rngs.o $(CFLAGS)
+
+unittest3: unittest3.c dominion.o rngs.o
+	gcc -o unittest3 -g unittest3.c dominion.o rngs.o $(CFLAGS)
+
+unittest4: unittest4.c dominion.o rngs.o
+	gcc -o unittest4 -g unittest4.c dominion.o rngs.o $(CFLAGS)
+
+unittest5: unittest5.c dominion.o rngs.o
+	gcc -o unittest5 -g unittest5.c dominion.o rngs.o $(CFLAGS)
+	
+unittest6: unittest6.c dominion.o rngs.o
+	gcc -o unittest6 -g unittest6.c dominion.o rngs.o $(CFLAGS)
+
+unittest6: unittest6.c dominion.o rngs.o
+	gcc -o unittest6 -g unittest6.c dominion.o rngs.o $(CFLAGS)
+
+unittest7: unittest7.c dominion.o rngs.o
+	gcc -o unittest7 -g unittest7.c dominion.o rngs.o $(CFLAGS)
+
+unittest8: unittest8.c dominion.o rngs.o
+	gcc -o unittest8 -g unittest8.c dominion.o rngs.o $(CFLAGS)
+
+unittest9: unittest9.c dominion.o rngs.o
+	gcc -o unittest9 -g unittest9.c dominion.o rngs.o $(CFLAGS)
+
+unittest10: unittest10.c dominion.o rngs.o
+	gcc -o unittest10 -g unittest10.c dominion.o rngs.o $(CFLAGS)
+
+unittestresults: unittest1 unittest2 unittest3 unittest4 unittest5 unittest6 unittest7 unittest8 unittest9 unittest10
+	./unittest1 >> unittestresults.out
+	./unittest2 >> unittestresults.out
+	./unittest3 >> unittestresults.out
+	./unittest4 >> unittestresults.out
+	./unittest5 >> unittestresults.out
+	./unittest6 >> unittestresults.out
+	./unittest7 >> unittestresults.out
+	./unittest8 >> unittestresults.out
+	./unittest9 >> unittestresults.out
+	./unittest10 >> unittestresults.out
+	gcov -b -f dominion.c >> unittestresults.out
+	cat dominion.c.gcov >> unittestresults.out
+	
+all: playdom player unittestresults
 
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe unittest*
